=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed type conversion of bulk parameters

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari

    - de-register watches to decrease DOM updates and improve performance in cluster view

    - fixed title of `tables` view if no tables exists or connection is down

2015/01/14 0.46.2
=================

 - fix: throw correct exception if `_version` is misused in WHERE clause

 - improved string lookup performance for group queries and global aggregates

 - Optimized memory estimates for min()/max() aggregates for the CircuitBreaker

 - improved speed of Alter table settings in partitioned tables

 - Restricted allowed characters in column names

2014/12/22 0.46.1
=================

 - Fixed broken COPY FROM/TO S3 caused by missing depencenies

 - Updated crate-admin to 0.11.1 which includes following changes:

   - Fixed title of `tables` view if no tables exists or connection is
     down

 - Fixed an issue that could cause bulk inserts to get stalled.

2014/12/17 0.46.0
=================

 - Add support for user-defined schemas.

 - Changed output of column names in error messages to subscript notation,
   so the correct notation to address columns in sql is reflected

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - implemented table ``information_schema.schemata`` with column ``schema_name``
   listing all available schemas

 - Array types are now fully supported in dynamic schemas. Note that
   Crate performs an internal migration, therefore downgrading to an
   older version is not supported

 - Updated Elasticsearch to 1.4.1

 - Improve performance of regex functions by actually